--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -203,7 +203,7 @@ Poor leathering with soap, deterioration of clothes, scale forming, Encrustation
     <string name="yellow_water">This water recommended for Drinking purpose</string>
 
     <string name="name">Test Name</string>
-    <string name="time">TIme</string>
+    <string name="time">Time</string>
     <string name="result">Value</string>
     <string name="remarks">Remarks</string>
 
