--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -217,6 +217,7 @@ Poor leathering with soap, deterioration of clothes, scale forming, Encrustation
     <string name="db_opt7">ALKALINE TEST</string>
     <string name="db_opt8">IRON TEST</string>
     <string name="db_opt9">TEST REPORTS</string>
+    <string name="db_opt10">WATCH OUR VIDEOS</string>
 
     <string name="result_">Result</string>
 
